fixed rightside mobile whitespace problem

--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+html, body {
+  width: 100%;
+  /* height: 100%; */
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
 
 .sideBar {
     position: -webkit-sticky;
